# rust_ai_serving_engine

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/rust_ai_serving_engine_api/: Cargo.toml
crates/rust_ai_serving_engine_api/src/: lib.rs
crates/rust_ai_serving_engine_cli/: Cargo.toml
crates/rust_ai_serving_engine_cli/src/: main.rs
crates/rust_ai_serving_engine_core/: Cargo.toml
crates/rust_ai_serving_engine_core/src/: error.rs  generation.rs  hub.rs  lib.rs  manifest.rs  registry.rs  runtime.rs
crates/rust_ai_serving_engine_models/: Cargo.toml
crates/rust_ai_serving_engine_models/src/: chat.rs  gpu_gemm.rs  lib.rs  llama_gguf.rs  profiling.rs  qwen2_gguf.rs  qwen3_gguf.rs  qwen3_model.rs  session.rs  threading.rs  tokenizer.rs
crates/rust_ai_serving_engine_python/: Cargo.toml
crates/rust_ai_serving_engine_python/src/: lib.rs  python.rs
