[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust_ai_serving_engine"
description = "Rust local AI model runtime with model registry, integrity verification, and Candle device probing."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "rust_ai_serving_engine contributors" }]
keywords = ["rust", "ai", "llm", "candle", "gguf", "inference", "local-model"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/arabangoo/rust_ai_serving_engine"

[tool.maturin]
manifest-path = "crates/rust_ai_serving_engine_python/Cargo.toml"
module-name = "rust_ai_serving_engine"
features = ["python"]
