[package]
name = "rust-ai-serving-engine-api"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible HTTP surface for rust_ai_serving_engine"

[dependencies]
axum.workspace = true
rust-ai-serving-engine-core = { path = "../rust_ai_serving_engine_core" }
rust-ai-serving-engine-models = { path = "../rust_ai_serving_engine_models" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
