[package]
name = "rust-ai-serving-engine-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model manifest and local registry primitives for rust_ai_serving_engine"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]

[dependencies]
candle-core.workspace = true
hf-hub.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
