[package]
name = "rust-ai-serving-engine-models"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Candle-backed local model adapters for rust_ai_serving_engine"

[features]
default = ["cpu"]
cpu = []
cuda = ["rust-ai-serving-engine-core/cuda", "candle-core/cuda"]
metal = ["rust-ai-serving-engine-core/metal", "candle-core/metal"]

[dependencies]
bytemuck = "1"
half = "2"
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
num_cpus = "1"
pollster = "0.4"
rayon.workspace = true
wgpu = "30"
rust-ai-serving-engine-core = { path = "../rust_ai_serving_engine_core" }
tokenizers.workspace = true
